--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,3 +1,7 @@
+html {
+  width: auto;
+  height: auto;
+}
 body {
     font-family: 'Ubuntu', sans-serif;
     margin: auto;
@@ -92,6 +96,7 @@ pre {
 
 .mapbox {
   margin-top: 50px;
+  margin-bottom: 30px;
 }
 
 .about-me {
@@ -105,5 +110,15 @@ pre {
 }
 
 p {
+  font-size: 0.8rem;
+}
+
+.container img {
+  padding-left: 90px;
+  padding-right: 30px;
+}
+
+ul {
+  margin-left: -4px;
   font-size: 0.9rem;
 }
