--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,7 @@
   <div class="col" id="minnesota"></div>
 </div>
 
-<div style="text-align: center; font-size: 0.8rem">
+<div style="text-align: center;">
   <a href="https://github.com/sp314/A-Random-Walk-Home">a random walk home</a>
 </div>
 
