--- a/themes/basics/layouts/partials/header.html
+++ b/themes/basics/layouts/partials/header.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="/css/stylesheet.css">
     </head>
     <body>
-      <div class="container-fluid">
+      <div class="container">
         <nav class="navbar navbar-expand-md navbar-light">
 
           <!-- empty brandname ensures toggler is on the right; hack really -->
