--- a/themes/basics/layouts/_default/list.html
+++ b/themes/basics/layouts/_default/list.html
@@ -4,11 +4,20 @@
     {{ range .Pages.ByDate.Reverse }}
     <li>
       <div class="row" id="posts">
-        <div class="d-none d-sm-block col-sm-3 date-time-title">
+        <div class="d-none d-sm-block col-sm-3 date-time-title" style="text-align: center; margin: auto;">
           <time>{{ .Date.Format "02 Jan 2006" }}</time>
         </div>
         <div class="col-sm-9 date-time-title post">
-          <a href="{{.Permalink}}">{{.Title}}</a>
+          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#project-preview" aria-expanded="false"
+            aria-controls="project-preview">
+            <h3>
+              <i class="collapse-icon fa fa-hourglass-end pull-left"></i> 
+              &nbsp {{.Title}}
+            </h3>
+          </button>
+          <div class="collapse card" id="project-preview">
+            <p>{{ .Summary }}</p>
+          </div>
         </div>
       </div>
     </li>
