--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -1,7 +1,7 @@
 {{ define "content" }}
 <div class="container" style="max-width: 55rem;">
   <div class="row">
-    <div class="col-sm-4">
+    <div class="avatar col-sm-4">
       <img src="/avatar.jpeg" class="img-fluid rounded">
     </div>
     <div class="col-sm-8">
