--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
 </div>
 
 <div style="text-align: center;">
-  <a href="https://github.com/sp314/A-Random-Walk-Home">a random walk home</a>
+  <a href="https://github.com/sp314/A-Random-Walk-Home" target="_blank">a random walk home</a>
 </div>
 
 <script type="text/javascript" src="//d3js.org/d3.v3.min.js"></script>
