connect page done

--- a/layouts/_default/connect.html
+++ b/layouts/_default/connect.html
@@ -1,20 +1,18 @@
 {{ define "content" }}
-<div class="container" style="max-width: 20rem; text-align: center;">
-    <div class="row">
-        <a href="mailto:sphan@macalester.edu" class="email social">
-                <i class="fas fa-envelope-square fa-4x"></i>
+<div class="container" style="max-width: 25rem; text-align: center;">
+    {{.Content}}
+    <div class="row" style="padding-top: 10px; display:inline-block;">
+        <a href="mailto:sphan@macalester.edu" style="color: #DBD56E;" class="email social">
+                <i class="fas fa-envelope-square fa-5x"></i>
         </a>
-
-        <a href="https://github.com/sp314" class="github social">
-            <i class="fab fa-github-square fa-4x"></i>
+        <a href="https://github.com/sp314" style="color: #24292E;" class="github social">
+            <i class="fab fa-github-square fa-5x"></i>
         </a>
-
-        <a href="https://twitter.com/son_kphan" class="twitter social">
-            <i class="fab fa-twitter-square fa-4x"></i>
+        <a href="https://twitter.com/son_kphan" style="color: #38A1F3;" class="social">
+            <i class="fab fa-twitter-square fa-5x"></i>
         </a>
-
-        <a href="https://www.linkedin.com/in/sonkphan/" class="linkedin social">
-            <i class="fab fa-linkedin fa-4x"></i>
+        <a href="https://www.linkedin.com/in/sonkphan/" style="color: #0077B5;" class="linkedin social">
+            <i class="fab fa-linkedin fa-5x"></i>
         </a>
     </div>
 </div>
