--- a/themes/basics/static/css/stylesheet.css
+++ b/themes/basics/static/css/stylesheet.css
@@ -131,27 +131,17 @@ pre {
   padding-top: 45px;
 }
 
-.email {
-  color: #008351;
-}
-
-.linkedin {
-  color: #0077B5;
-}
-.github {
-  color: #24292E;
-}
-
-.twitter {
-  color: #38A1F3
-}
-
 .social {
-  opacity: 1;
-  transition: 0.3s;
+  padding: 2rem 1rem;
+  opacity: 0.6;
   margin: auto;
+  transition: opacity .4s ease-in-out;
+  -moz-transition: opacity .4s ease-in-out;
+  -webkit-transition: opacity .4s ease-in-out;
 }
 
-.social :hover {
-  opacity: 1
+.social:hover {
+  opacity: 1.2;
+  text-decoration: none;
+  color: inherit;
 }
