I guess fontawesome decided to work again

--- a/layouts/_default/connect.html
+++ b/layouts/_default/connect.html
@@ -3,16 +3,16 @@
     {{.Content}}
     <div class="row" style="padding-top: 10px; display:inline-block;">
         <a href="mailto:sphan@macalester.edu" style="color: #DBD56E;" class="email social">
-                <i class="fa fa-envelope-square fa-5x"></i>
+                <i class="fas fa-envelope-square fa-5x"></i>
         </a>
         <a href="https://github.com/sp314" style="color: #24292E;" class="github social">
-            <i class="fa fa-github-square fa-5x"></i>
+            <i class="fab fa-github-square fa-5x"></i>
         </a>
         <a href="https://twitter.com/son_kphan" style="color: #38A1F3;" class="social">
-            <i class="fa fa-twitter-square fa-5x"></i>
+            <i class="fab fa-twitter-square fa-5x"></i>
         </a>
         <a href="https://www.linkedin.com/in/sonkphan/" style="color: #0077B5;" class="linkedin social">
-            <i class="fa fa-linkedin-square fa-5x"></i>
+            <i class="fab fa-linkedin-square fa-5x"></i>
         </a>
     </div>
 </div>
