--- a/layouts/_default/connect.html
+++ b/layouts/_default/connect.html
@@ -12,7 +12,7 @@
             <i class="fab fa-twitter-square fa-5x"></i>
         </a>
         <a href="https://www.linkedin.com/in/sonkphan/" style="color: #0077B5;" class="linkedin social">
-            <i class="fab fa-linkedin fa-5x"></i>
+            <i class="fab fa-linkedin-square fa-5x"></i>
         </a>
     </div>
 </div>
