--- a/themes/sonphan/layouts/_default/list.html
+++ b/themes/sonphan/layouts/_default/list.html
@@ -13,7 +13,7 @@
           <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#{{$post_project}}"
             aria-expanded="false" aria-controls="{{$post_project}}">
             <h3>
-              <i class="collapse-icon fa fa-hourglass-end pull-left"></i>
+              <i class="collapse-icon fa fa-hourglass-end pull-left" style="color: #743d9a;"></i>
               &nbsp {{.Title}}
             </h3>
           </button>
@@ -21,7 +21,7 @@
             <div class="description">
               <p>{{ .Summary }}</p>
               <div class="text-center">
-                <a href="{{ .RelPermalink }}" class="btn btn-primary text-center">
+                <a href="{{ .RelPermalink }}" class="btn text-center">
                   <i class="fas fa-book-open"></i> &nbsp READ
                 </a>
               </div>
