--- a/themes/sonphan/layouts/partials/footer.html
+++ b/themes/sonphan/layouts/partials/footer.html
@@ -8,6 +8,15 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
   integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
+
+{{ if .Params.code_folding}} 
+  <script>
+  $(document).ready(function () {
+    window.initializeCodeFolding("show" === "hide");
+  });
+  </script>
+  <script src="{{ "js/codefolding.js" | relURL }}"></script>
+{{ end }}
 </body>
 
 </html>
