summary page on deploy ???

--- a/themes/sonphan/layouts/_default/list.html
+++ b/themes/sonphan/layouts/_default/list.html
@@ -19,7 +19,7 @@
           </button>
           <div class="collapse card" id="{{$post_project}}" style="font-family: 'Ubuntu', sans-serif; font-size: 1rem;">
             <div class="description">
-              <p>{{ .Summary }}</p>
+              <p>{{ .Params.Summary }}</p>
               <div class="text-center">
                 <a href="{{ .RelPermalink }}" class="btn text-center">
                   <i class="fas fa-book-open"></i> &nbsp READ
