--- a/themes/sonphan/layouts/_default/list.html
+++ b/themes/sonphan/layouts/_default/list.html
@@ -17,7 +17,7 @@
               &nbsp {{.Title}}
             </h3>
           </button>
-          <div class="collapse card" id="{{$post_project}}" style="font-family: 'Ubuntu', sans-serif; font-size: 1rem;">
+          <div class="collapse card" id="{{$post_project}}" style="font-size: 1rem;">
             <div class="description">
               <p>{{ .Params.Summary }}</p>
               <div class="text-center">
