--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -2,7 +2,7 @@
 <div class="container" style="max-width: 55rem;">
   <div class="row">
     <div class="avatar col-sm-4">
-      <img src="/img/avatar.jpeg" class="img-fluid rounded">
+      <img src="/img/avatar.jpg" class="img-fluid rounded">
     </div>
     <div class="col-sm-8">
       <div class="about-me align-self-end">
